--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <p><i class="bi bi-send-plus"></i> 400SMKID@gmail.com</p>
                 <p><i class="bi bi-phone"></i>+506 8940-2797</p>
                 <div class="social-icons">
-                    <a href="https://www.instagram.com/__s.c.999/?hl=es"><i class="bi bi-instagram"></i></a>
+                    <a href="https://www.instagram.com/prxwl3r/?hl=es"><i class="bi bi-instagram"></i></a>
                     <a href="https://www.linkedin.com/in/carlos-somoza-148816287/"><i class="bi bi-linkedin"></i></i></a>
                     <!-- <a href=""><i class="bi bi-discord"></i></a> -->
                     <a href="https://github.com/400SMKID"><i class="bi bi-github"></i></i></a>
